--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,11 @@
-spring.datasource.url=${DATABASE_URL}
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
-jwt.secret=${JWT_SECRET}
-jwt.expiration=${JWT_EXPIRATION}
+spring.datasource.url=jdbc:postgresql://localhost:5432/springboot_course
+spring.datasource.username=postgres
+spring.datasource.password=1234
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+jwt.secret=MYJWTSECRET
+jwt.expiration=3600000
