--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,13 +1,8 @@
-spring.profiles.active=dev
+spring.datasource.url=${DATABASE_URL}
 
-spring.jpa.open-in-view=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
